# superpoweredcv

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agents.md  readme.md  spec-red-teaming-module.md  spec.md
core/: Cargo.toml
core/src/: analysis.rs  ats_simulation.rs  config.rs  generator.rs  gui.rs  latex.rs  lib.rs  main.rs  pdf.rs  pdf_utils.rs  red_team.rs  simulation.rs  templates.rs
core/src/attacks/: mod.rs  templates.rs
core/src/gui/: styles.rs  types.rs
core/src/gui/components/: ai_assistant.rs  ats_dashboard.rs  latex_builder.rs  main_content.rs  mod.rs  preview.rs  settings.rs
core/src/latex/: manager.rs
core/tests/: integration_tests.rs
docs/: agents.md  spec-red-teaming-module.md  spec.md
extension/: .eslintrc.json  README.md  eslint.config.js  jest.config.js  manifest.json  package-lock.json  package.json  popup.html  spec.md  styles.css
extension/manifests/: firefox.json  safari.json
extension/src/background/: index.js
extension/src/content/: index.js
extension/src/popup/: index.html  index.js  styles.css
extension/src/utils/: logger.js
extension/tests/: background.test.js  content.test.js
scripts/: build_unix.sh  build_win.bat  check_extension_package.ps1  package_extension.ps1  package_extension.sh  run_core.bat  run_core.ps1  run_core.sh  run_demo.sh
src/: analysis.rs  lib.rs  main.rs  pdf.rs  pipeline.rs  profile.rs  red_team.rs  simulation.rs  templates.rs
userscript/: linkedin_profile_grabber.user.js  readme.md
