[package]
name = "superpoweredcv"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.9.8"
config = "0.15.19"
lopdf = "0.38.0"
reqwest = { version = "0.12.24", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
